--- a/sass/partials/_default-spacing.scss
+++ b/sass/partials/_default-spacing.scss
@@ -85,13 +85,13 @@
   }
 }
 .py-md-100{
-  @include rmaxwd(991){
+  @include md{
     padding-top: 100px !important;
     padding-bottom: 100px !important;
   }
 }
 .py-lg-120{
-  @include rmaxwd(1199){
+  @include lg{
     padding-top: 120px !important;
     padding-bottom: 120px !important;
   }
